--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,17 @@
+body{
+  background-color: tan;
+  color: brown;
+}
+h2{
+  color: rgb(58, 15, 29);
+}
 .card {
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
   border-radius: 5px;
 }
 .card:hover {
-  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  box-shadow: 0 8px 16px 0 rgb(208, 160, 223)
 }
 .cont {
   width: 100%;
